@@ -400,17 +400,13 @@ public class WebForm extends WebRequestSource {
     }
 
 
-    public class Scriptable implements ScriptableObject {
+    public class Scriptable extends ScriptableObject {
         public String getAction() { return WebForm.this.getAction(); }
         public void setAction( String newAction ) { _action = newAction; }
 
         public void setParameterValue( String name, String value ) {
             getParameter( name ).getScriptableObject().set( "value", value );
         }
-
-
-        public void set( String propertyName, Object value ) {}
-        public Object get( String propertyName ) { return null; }
     }
 
 
